--- a/ukrainian_archive_company/css/style.css
+++ b/ukrainian_archive_company/css/style.css
@@ -761,7 +761,6 @@ text-align: left;
 .wrapper.block_six_container {
 	max-width: 1066px;
 	margin: 0 auto;
-	
     padding-right: 40px;
 }
 .block_six_container {
@@ -1157,6 +1156,12 @@ text-align: left;
 .main_content_text {
 	padding-top: 20px;
 }
+.block_seven_container {
+	padding-top: 30px;
+}
+.block_six_container {
+	padding-bottom: 40px;
+}
  .languages {
 	float: left;
 	padding-left: 10px;
@@ -1164,6 +1169,15 @@ text-align: left;
 }
 .languages_count {
 	padding-left: 5px;
+}
+.block_seven_head {
+	font-size: 22px
+}
+.block_seven_text {
+	font-size: 16px;
+}
+.block_eight_container {
+	padding: 50px 0;
 }
 .card_item {
 	padding-left: 0;
@@ -1206,7 +1220,12 @@ text-align: left;
 .languages {
 	padding-left: 0;
 }
-
+.wrapper.block_seven_container {
+	padding-bottom: 20px;
+}
+.block_six_container {
+	padding-top: 48px;
+}
 }
 
 
