--- a/ukrainian_archive_company/css/style.css
+++ b/ukrainian_archive_company/css/style.css
@@ -310,13 +310,14 @@ border-color:  #5c636e;
 .carousel_container_item {
 	display: inline-block;
 	padding: 10px;
-	padding-right: 90px;
-	padding-left: 90px
+	padding-right: 70px;
+	padding-left: 70px
 }
 .block_one {
 	background-color: #3359a6;
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position: center;
 	width: 100%;
 }
 .block_one_container {
@@ -814,6 +815,7 @@ padding-bottom: 14px;
 .block_nine {
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position: center;
 	width: 100%;
 	overflow: hidden;
 }
@@ -1099,6 +1101,9 @@ text-align: left;
  		float: none;
  		width: 100%;
  	}
+ 	.block_one_text {
+ 		font-size: 12px;
+ 	}
  	.download_file {
     float: none;
     width: 100%;
@@ -1139,7 +1144,10 @@ text-align: left;
  		font-size: 18px;
  	}
  	#slider.container, .block_one {
- 		height: 225px;
+ 		height: 205px;
+ 	}
+ 	.block_one_text {
+ 		font-size: 12px;
  	}
  	/*.slider-wrapper {
  		height: 225px;
@@ -1254,7 +1262,7 @@ text-align: left;
 	 .wrapper.block_five_container {
 	 	padding-left: 80px; 
 	 }
-	 .main_content_item, .block_one_text, .main_content_item, .block_four_sub_text, .block_five_list_item, .text  {
+	 .main_content_item,  .main_content_item, .block_four_sub_text, .block_five_list_item, .text  {
 	 	font-size: 16px;
 	 }
 	 .main_content_item {
