--- a/window_company/html_css_js/css/style.css
+++ b/window_company/html_css_js/css/style.css
@@ -124,6 +124,9 @@ text-transform: uppercase;
 .main_menu_link:hover {
 	color:  #a2bd30;
 }
+.main_menu_link:focus {
+    color: #a2bd30;
+}
 .main_menu_item:first-child {
 	padding-left: 0;
 }
@@ -149,7 +152,9 @@ text-transform: uppercase;
   margin: 0 auto 0 auto;
   border-radius: 4px;
 }
-
+.wrapper_slider {
+	width: 935px;
+}
 #slider ul {
   position: relative;
   margin: 0;
@@ -157,6 +162,7 @@ text-transform: uppercase;
   height: 245px;
   list-style: none;
   overflow: hidden;
+  width: 935px;
 }
 
 #slider ul li {
@@ -165,7 +171,7 @@ text-transform: uppercase;
   float: left;
   margin: 0;
   padding: 0;
-  width: 960px;
+  width: 935px;
   height: 245px;
   background-image: url(img/banner.png);
   background-size: 100% 100%;
@@ -196,16 +202,33 @@ a.control_prev, a.control_next {
 background-color: #000000;
   color: #fff;
   cursor: pointer;
+  width: 38px;
+height: 38px;
+background-size: 15px 25px;
+background-position: center;
+transition: all 0.5s ease;
 }
-.control_next img {
+a.control_prev {
+background-image: url(../img/arrow_white.png);
+background-repeat: no-repeat;
+}
+a.control_prev:hover {
+	background-image: url('../img/arrow-green.png');
+}
+a.control_next:hover {
+	background-image: url('../img/arrow-green.png');
+}
+a.control_next {
 	 -ms-transform: rotate(180deg); /* IE 9 */
     -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
     transform: rotate(180deg);
+    background-image: url(../img/arrow_white.png);
+    background-repeat: no-repeat;
 }
 
 a.control_next {
   right: 24px;
-  z-index: 9999;
+  z-index: 999;
 }
 /*services*/
 .services_list {
@@ -326,8 +349,10 @@ color:  #292c2b;
 font-size: 24px;
 line-height: 24px;
 text-align: center;
-float: left;
-width: 20%;
+display: inline-block;
+padding: 5px;
+vertical-align: top;
+width: 18%;
 }
 .how_we_work_item:hover {
 	color: #a2bd30;
@@ -352,6 +377,7 @@ text-align: center;
 }
 .why_we_container {
 	padding-left: 30px;
+	padding-bottom: 30px;
 }
 .why_we_container li {
 	list-style: decimal;
@@ -380,7 +406,8 @@ text-align: center;
 	width: 24%;
 	text-align: center;
 	vertical-align: top;
-	padding: 20px 1%;
+	padding: 30px 1%;
+	padding-bottom: 70px;
 }
 .payment_item_head {
 	font-family: 'Myriad Pro Condensed';
@@ -389,6 +416,7 @@ font-size: 29px;
 line-height: 30px;
 text-align: center;
 font-weight: 300;
+padding: 20px 0;
 }
 .payment_item_text {
 	font-family: 'Myriad Pro Condensed';
@@ -453,6 +481,7 @@ transition: all  0.5s ease;
 }
 .copyright_container {
 	background-color: #aeafb1;
+	margin-top: 10px;
 }
 .copyright {
 	font-family: 'OpenSans';
@@ -466,6 +495,37 @@ transition: all  0.5s ease;
 	text-decoration: none;
 	color: #fff;
 }
+.bxslider li {
+	text-align: center;
+}
+.bxslider li p {
+	font-family: 'Myriad Pro Condensed';
+color:  #b0b1b3;
+font-weight: 300;
+font-size: 24px;
+line-height: 24px;
+text-align: center;
+}
+.review_head {
+	font-family: 'Myriad Pro Condensed';
+color:  #000000;
+font-size: 29px;
+line-height: 39px;
+text-align: center;
+}
+/*.bx-controls-direction {
+	position: relative;
+}
+.bx-prev {
+	position: absolute;
+    bottom: 150px;
+    left: -40px;
+}
+.bx-next {
+	    position: absolute;
+    right: -40px;
+    bottom: 150px;
+}*/
 @media (max-width: 1050px) {
 	.main_menu_item:first-child {
     padding-left: 6%;
@@ -479,6 +539,9 @@ transition: all  0.5s ease;
 	#slider ul li {
     width: 400px;
     height: 245px;
+}
+.wrapper_slider {
+	width: 400px;
 }
 .cnt {
 	border:none;
@@ -497,6 +560,9 @@ a.control_next {
 	}
 	.why_we_container li {
 		text-indent: 0;
+	}
+	.carusel_hider {
+		width: 350px;
 	}
 }
 @media (max-width: 650px) {
@@ -540,6 +606,9 @@ a.control_next {
     width: 250px;
     height: 145px;
 }
+.wrapper_slider {
+	width: 250px;
+}
 }
 @media (max-width: 560px) {
 	.header_number {
@@ -551,7 +620,380 @@ a.control_next {
 	word-spacing: 2px;
 }
 .how_we_work_item {
-	width: 50%;
+	width: 45%;
+}
 }
 
+#modal_form {
+	border-radius: 4px;
+	border-style: solid;
+	border-width: 1px;
+	border-color:  #b0b1b3;
+	box-sizing: border-box;
+	background-color:  #fbfbfb;
+	width: 221px;
+	height: 203px;
+	background: #fff;
+	position: fixed; /* чтoбы oкнo былo в видимoй зoне в любoм месте */
+	display: none; /* в oбычнoм сoстoянии oкнa не дoлжнo быть */
+	opacity: 0; /* пoлнoстью прoзрaчнo для aнимирoвaния */
+	z-index: 5; /* oкнo дoлжнo быть нaибoлее бoльшем слoе */
+	padding: 20px 10px;
+	z-index: 9999;
+	left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    
+}
+/* Кнoпкa зaкрыть для тех ктo в тaнке) */
+#modal_form #modal_close {
+	
+	position: absolute;
+	right: 2px;
+	top: 2px;
+	cursor: pointer;
+	display: block;
+}
+/* Пoдлoжкa */
+#overlay {
+	z-index:999; /* пoдлoжкa дoлжнa быть выше слoев элементoв сaйтa, нo ниже слoя мoдaльнoгo oкнa */
+	position:fixed; /* всегдa перекрывaет весь сaйт */
+	background-color:#000; /* чернaя */
+	opacity:0.8; /* нo немнoгo прoзрaчнa */
+	-moz-opacity:0.8; /* фикс прозрачности для старых браузеров */
+	filter:alpha(opacity=80);
+	top:0; /* сверху и слевa 0, oбязaтельные свoйствa! */
+	left:0;
+	cursor:pointer;
+	display:none; /* в oбычнoм сoстoянии её нет) */
+	 width: 100%;
+    height: 100vh;
+}
+#modal_form1 {
+	border-radius: 4px;
+background-color:  #ffffff;
+box-shadow: 0px 0px 18px 0px #e9e9e9;
+	box-sizing: border-box;
+	background-color:  #ffffff;
+	position: fixed; /* чтoбы oкнo былo в видимoй зoне в любoм месте */
+	display: none; /* в oбычнoм сoстoянии oкнa не дoлжнo быть */
+	opacity: 0; /* пoлнoстью прoзрaчнo для aнимирoвaния */
+	z-index: 5; /* oкнo дoлжнo быть нaибoлее бoльшем слoе */
+	padding: 20px 10px;
+	z-index: 9999;
+	left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    
+}
+/* Кнoпкa зaкрыть для тех ктo в тaнке) */
+#modal_form1 #modal_close1 {
+	position: absolute;
+	right: 2px;
+	top: 2px;
+	cursor: pointer;
+	display: block;
+	background-image: url(../img/close.png);
+	background-repeat: no-repeat;
+	width: 34px;
+height: 34px;
+}
+/* Пoдлoжкa */
+#overlay1 {
+	z-index:999; /* пoдлoжкa дoлжнa быть выше слoев элементoв сaйтa, нo ниже слoя мoдaльнoгo oкнa */
+	position:fixed; /* всегдa перекрывaет весь сaйт */
+	background-color:#000; /* чернaя */
+	opacity:0.8; /* нo немнoгo прoзрaчнa */
+	-moz-opacity:0.8; /* фикс прозрачности для старых браузеров */
+	filter:alpha(opacity=80);
+	top:0; /* сверху и слевa 0, oбязaтельные свoйствa! */
+	left:0;
+	cursor:pointer;
+	display:none; /* в oбычнoм сoстoянии её нет) */
+	 width: 100%;
+    height: 100vh;
+}
+.product_card_img {
+	width: 33%;
+	float: left;
+}
+.product_card_img a {
+	display: block;
+	margin-bottom: 10px;
+}
+.product_card_text h3 {
+	font-family: 'Myriad Pro Condensed';
+color:  #292c2b;
+font-size: 30px;
+font-weight: 400;
+line-height: 24px;
+text-align: left;
+padding-top: 20px;
+padding-bottom: 20px;
+border-bottom: 1px solid
+}
+.product_card_text p {
+	font-family: 'Myriad Pro Condensed';
+color:  #666867;
+font-size: 20px;
+line-height: 24px;
+text-align: left;
+font-weight: 300;
+text-indent: 10px;
+padding-top: 20px;
+}
+.product_card_text {
+	width: 60%;
+	float: left;
+	margin-left: 25px;
+
+}
+label[for=name] {
+	font-family: 'Myriad Pro Condensed';
+color:  #b0b1b3;
+font-size: 14px;
+line-height: 24px;
+text-align: left;
+}
+label[for=phone] {
+	font-family: 'Myriad Pro Condensed';
+color:  #b0b1b3;
+font-size: 14px;
+line-height: 24px;
+text-align: left;
+}
+#name, #phone {
+	border-radius: 2px;
+border-style: solid;
+border-width: 1px;
+border-color:  #b0b1b3;
+box-sizing: border-box;
+background-color:  #ffffff;
+width: 195px;
+height: 30px;
+}
+#submit {
+	border-radius: 2px;
+background-color:  #a2bd30;
+box-shadow: 0px 2px 0px 0px #6d8213;
+width: 195px;
+height: 37px;
+font-family: 'Myriad Pro Condensed';
+color:  #ffffff;
+font-size: 24px;
+line-height: 24px;
+text-align: center;
+outline: none;
+border: none;
+margin-top: 20px;
+transition: all 0.5s ease;
+}
+#submit:hover {
+	background-color: #cae360;
+    box-shadow: 0px 2px 0px 0px #cae360;
+}
+.review {
+	background-color: #eeeff0;
+	padding-bottom: 50px;
+}
+.review_head {
+	font-family: 'Myriad Pro Condensed';
+color:  #b0b1b3;
+font-size: 30px;
+line-height: 24px;
+text-align: center;
+padding: 50px 0;
+}
+.item_card_line {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    height: 1px;
+    background: #89a739;
+}
+
+.main_header_service {
+    color:  #cfe19e;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    padding: 50px 60px;
+}
+
+.item_slider {
+    text-align: center;
+    position: relative;
+}
+
+.item_slider_list {
+    position: relative;
+    padding-left: 0;
+    list-style: none;
+}
+
+.item_slider_image {
+    height: 250px;
+    position: relative;
+}
+
+.house_item_text {
+    margin-top: 40px;
+    color:  #91987f;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.item_slider_price {
+    position: absolute;
+    top: 225px;
+    right: -8px;
+}
+
+.gallery_item {
+    padding-top: 100px;
+    padding-bottom: 40px;
+    color: #fff;
+}
+
+.carusel_hider {
+    margin: 0 auto 50px;
+    width: 700px;
+    overflow: hidden;
+}
+
+.carusel_item {
+    width: 350px;
+    text-align: left;
+    float: left;
+    padding: 20px 20px;
+    margin: 0 15px;
+    text-align: center;
+}
+.carusel_item_head {
+	font-family: 'Myriad Pro Condensed';
+color:  #000000;
+font-size: 29px;
+line-height: 39px;
+font-weight: 300;
+text-align: center;
+}
+.carusel_item_text {
+	font-family: 'Myriad Pro Condensed';
+color:  #b0b1b3;
+font-size: 24px;
+line-height: 24px;
+text-align: center;
+}
+.description_list {
+    padding-left: 0;
+    padding-top: 30px;
+    list-style: none;
+    margin-bottom: 20px;
+}
+
+.description_list li{
+    padding: 0 0 10px 0;
+}
+
+.item_slider_button_div {
+    border-bottom: solid #11215a 4px;
+    box-shadow: inset 0 3px 3px 1px #4e729c;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 3px;
+    background-color: #0b30af;
+    width: 224px;
+    height: 54px;
+    font-family: OpenSans, sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    transition: linear .1s;
+}
+
+.item_slider_price_text {
+    top: 13px;
+    right: 13px;
+    position: absolute;
+    color:  #cddf9d;
+    font-size: 17px;
+    font-weight: 400;
+}
+
+.item_slider_button {
+    text-decoration: none;
+    color: #fff;
+}
+
+.item_slider_button:hover .item_slider_button_div{
+    background: #142a74;
+    border-bottom: solid #0b1845 4px;
+}
+
+.arrow_left {
+    z-index: 9999;
+    cursor: pointer;
+    background: url(../img/arrow_black.png) no-repeat;
+    width: 49px;
+    height: 49px;
+    position: absolute;
+    top: 50%;
+    margin-top: -24.5px;
+    left: 50px;
+    transition: all ease .3s;
+}
+
+.arrow_left:hover {
+    cursor: pointer;
+    background: url(../img/arrow-green.png) no-repeat;
+    width: 49px;
+    height: 49px;
+    position: absolute;
+    top: 50%;
+    margin-top: -24.5px;
+    right: 50px;
+}
+
+.arrow_right {
+    z-index: 9999;
+    cursor: pointer;
+    background: url(../img/arrow_black.png) no-repeat;
+    width: 49px;
+    height: 49px;
+    position: absolute;
+    top: 50%;
+    margin-top: -24.5px;
+    right: 50px;
+    transition: all ease .3s;
+}
+
+.arrow_right:hover {
+    cursor: pointer;
+    background: url(../img/arrow-green.png) no-repeat;
+    width: 49px;
+    height: 49px;
+    position: absolute;
+    top: 50%;
+    margin-top: -24.5px;
+    right: 50px;
+}
+
+.item_slider_bottom_circle {
+    top: 240px;
+    left: 50%;
+    margin-left: -500px;
+    position: absolute;
+    width: 1000px;
+    height: 500px;
+    border-radius: 80%/0 0 5em 5em;
+}
+@media (max-width: 900px) {
+	.carusel_hider {
+		width: 350px;
+	}
+}
+@media (max-width: 600px) {
+	.carusel_hider {
+		width: 300px;
+	}
+	.carusel_item {
+    width: 300px;
 }
