--- a/window_company/html_css_js/css/style.css
+++ b/window_company/html_css_js/css/style.css
@@ -670,6 +670,7 @@ a.control_next {
     height: 100vh;
 }
 #modal_form1 {
+	width: 50%;
 	border-radius: 4px;
 background-color:  #ffffff;
 box-shadow: 0px 0px 18px 0px #e9e9e9;
@@ -955,7 +956,7 @@ text-align: center;
 .arrow_right {
     z-index: 9999;
     cursor: pointer;
-    background: url(../img/arrow_black.png) no-repeat;
+    background: url(../img/arrow_right.png) no-repeat;
     width: 49px;
     height: 49px;
     position: absolute;
@@ -967,7 +968,7 @@ text-align: center;
 
 .arrow_right:hover {
     cursor: pointer;
-    background: url(../img/arrow-green.png) no-repeat;
+    background: url(../img/arrow_green_left.png) no-repeat;
     width: 49px;
     height: 49px;
     position: absolute;
